dnl Process this file with autoconf to produce a configure script.
AC_INIT(c2html.l)
AC_CONFIG_HEADER(config.h)
VERSION=0.0.1
AC_SUBST(VERSION)
PROJECT_NAME=c2epub
AC_SUBST(PROJECT_NAME)

DOCDIR=\${prefix}/doc/$PROJECT_NAME
AC_ARG_ENABLE(share-usage, 
[  --enable-share-usage    Use 'share' in directory names for documentation.
                          Sets the following variables:
                            mandir  = \$(prefix)/share/man
                            infodir = \$(prefix)/share/info
                            docdir  = \$(prefix)/share/doc/c2html],
                           mandir=\${prefix}/share/man;
                           infodir=\${prefix}/share/info;
                           DOCDIR=\${prefix}/share/doc/$PROJECT_NAME)

AC_ARG_ENABLE(fhs, 
[  --enable-fhs            Use 'File Hierarchy Standard 2.0'
                          Sets the following variables:
                            prefix  = /usr
                            mandir  = /usr/share/man
                            infodir = /usr/share/info
                            docdir  = /usr/share/doc/c2html],
                           prefix=/usr;
                           mandir=\${prefix}/share/man;
                           infodir=\${prefix}/share/info;
                           DOCDIR=\${prefix}/share/doc/$PROJECT_NAME)
AC_SUBST(DOCDIR)
dnl Checks for programs.
dnl AC_PROG_MAKE_SET
AC_PROG_CC
dnl AC_PROG_LEX
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(fl, yylex, uuid, zip)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_HEADERS(malloc.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl this sets LEX_OUTPUT_ROOT (flex -> lex.yy)
AC_DECL_YYTEXT
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MMAP
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(strstr)
dnl No longer use this function
dnl AC_CHECK_FUNCS(snprintf)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(popen)
AC_CHECK_FUNCS(fileno)

dnl This goes into the config.h file
AC_DEFINE_UNQUOTED(VERSION,"$VERSION")
AC_DEFINE_UNQUOTED(PROJECT_NAME,"$PROJECT_NAME")

dnl This is the main outputfile
AC_OUTPUT(Makefile)
